--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "check-dependencies": "rnx-align-deps",
     "ios": "react-native run-ios",
+    "fix-dependencies": "rnx-align-deps --write",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.9.12",
     "react": "18.2.0",
-    "react-native": "0.71.4",
-    "react-native-reanimated": "^3.0.2",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0",
+    "react-native": "^0.72.0",
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-reanimated": "^3.3.0",
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "^3.21.0",
     "react-native-vision-camera": "^2.15.4",
     "vision-camera-code-scanner": "^0.2.0"
   },
@@ -24,20 +27,46 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native/eslint-config": "^0.72.2",
+    "@react-native/metro-config": "^0.72.0",
+    "@rnx-kit/align-deps": "^2.2.4",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
+    "@types/metro-config": "^0.76.3",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.8",
+    "metro-react-native-babel-preset": "^0.76.5",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
-  "jest": {
-    "preset": "react-native"
+  "engines": {
+    "node": ">=16"
+  },
+  "rnx-kit": {
+    "kitType": "app",
+    "alignDeps": {
+      "requirements": [
+        "react-native@0.72"
+      ],
+      "capabilities": [
+        "animation",
+        "babel-preset-react-native",
+        "core",
+        "core-android",
+        "core-ios",
+        "core/metro-config",
+        "jest",
+        "navigation/native",
+        "react",
+        "react-test-renderer",
+        "safe-area",
+        "screens"
+      ]
+    }
   }
 }
