--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.0",
     "react-native-vision-camera": "^2.15.4",
+    "rtn-calculator": "../RTNCalculator",
+    "rtn-centered-text": "../RTNCenteredText",
     "vision-camera-code-scanner": "^0.2.0"
   },
   "devDependencies": {
