--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.4.0",
+    "buffer": "^6.0.3",
     "react": "18.2.0",
     "react-native": "^0.72.0",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.0",
     "react-native-vision-camera": "^2.15.4",
+    "react-native-webview": "^13.2.2",
     "rtn-calculator": "../RTNCalculator",
     "rtn-centered-text": "../RTNCenteredText",
+    "uuid": "^9.0.0",
     "vision-camera-code-scanner": "^0.2.0"
   },
   "devDependencies": {
@@ -36,13 +41,17 @@
     "@types/jest": "^29.2.1",
     "@types/metro-config": "^0.76.3",
     "@types/react": "^18.0.24",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/uuid": "^9.0.2",
     "babel-jest": "^29.2.1",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "^0.76.5",
     "prettier": "^2.4.1",
+    "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
