--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "buffer": "^6.0.3",
     "react": "18.2.0",
     "react-native": "^0.72.0",
+    "react-native-config": "^1.5.1",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-get-random-values": "^1.9.0",
     "react-native-reanimated": "^3.3.0",
@@ -45,7 +46,6 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/uuid": "^9.0.2",
     "babel-jest": "^29.2.1",
-    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
